crates/actor-core/tests/compile_fail/unhandled_ask.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/unhandled_ask.rs:41:25
   |
41 |     let _ = greeter.ask(Question);
   |                     --- ^^^^^^^^ expected `Hello`, found `Question`
   |                     |
   |                     arguments to this method are incorrect
   |
help: the return type of this call is `Question` due to the type of the argument passed
  --> tests/compile_fail/unhandled_ask.rs:41:13
   |
41 |     let _ = greeter.ask(Question);
   |             ^^^^^^^^^^^^--------^
   |                         |
   |                         this argument influences the return type of `ask`
note: method defined here
  --> src/refs.rs
   |
   |     pub async fn ask<M>(&self, msg: M) -> Result<M::Reply, CallError>
   |                  ^^^
